Little view bug
max-height changed... scrollbar nu suporta o gramada de browsere... sa
il schimbi

--- a/css/style.css
+++ b/css/style.css
@@ -328,9 +328,9 @@ body {
 	border: 0px;
 	padding: 0px;
 	overflow: auto;
-	max-height: 185px;
-	
+	max-height: 181px;	
 }
+
 #fixed-wrapper {
 	display: table;
 	float: right;
